WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60825
Flashing window frame and graphical glitches after exiting full screen mode.
https://bugs.webkit.org/show_bug.cgi?id=60825
Summary
Flashing window frame and graphical glitches after exiting full screen mode.
Jer Noble
Reported
2011-05-13 19:45:51 PDT
Flashing window frame and graphical glitches after exiting full screen mode.
Attachments
Patch
(3.45 KB, patch)
2011-05-13 19:49 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2011-05-13 19:49:27 PDT
Created
attachment 93543
[details]
Patch
WebKit Commit Bot
Comment 2
2011-05-14 09:17:32 PDT
Comment on
attachment 93543
[details]
Patch Clearing flags on attachment: 93543 Committed
r86486
: <
http://trac.webkit.org/changeset/86486
>
WebKit Commit Bot
Comment 3
2011-05-14 09:17:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug